Fixed: when scrolling, blank any pages that do not have content
fixes #635

--- a/diamm/templates/website/source/images.jinja2
+++ b/diamm/templates/website/source/images.jinja2
@@ -45,8 +45,11 @@
         {
             if (ranges.length === 0)
             {
+                let parent = document.getElementById("diva-page-details");
+                parent.innerHTML = "";
                 return null;
             }
+
             let template = document.getElementById("diva-page-details-template");
             const clone = template.content.cloneNode(true);
 
