fix static path

--- a/diamm/templates/website/search/search.jinja2
+++ b/diamm/templates/website/search/search.jinja2
@@ -34,7 +34,7 @@
             }]
         }
     </script>
-    <script src="/search-app/dist/search.js"></script>
+    <script src="{{ static('apps/search/search.js') }}"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () =>
         {
