--- a/diamm/templates/base.jinja2
+++ b/diamm/templates/base.jinja2
@@ -63,5 +63,19 @@
     </main>
 
     {% include "website/blocks/footer.jinja2" %}
+
+    {% block scripts %}
+    {% endblock %}
+    {% if not debug %}
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BX71EKZJVX"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-BX71EKZJVX');
+    </script>
+    {% endif %}
 </body>
 </html>
