Fixed: Fragment and completeness
Adds two new fields to items: A checkbox for fragments, and a dropdown list for the completeness of the composition in the source.

fixes #592

--- a/diamm/templates/website/source/inventory-composer-order.jinja2
+++ b/diamm/templates/website/source/inventory-composer-order.jinja2
@@ -27,7 +27,9 @@
                     <li>
                         {{ "(?) " if cmp.uncertain else "" }}
                         <a href="{{ cmp.url }}">{{ cmp.composition|default("[No description]") }}</a>
+                        {% if cmp.fragment %}<em>(frag.)</em>{% endif %}
                         &ndash;{{ foliation(cmp, show_imagelinks and entry.pages and request.user.is_authenticated) }}
+                        {% if cmp.completeness %}<em>{{ cmp.completeness }}</em>{% endif %}
                     </li>
                     {% endfor %}
                 </ul>
