--- a/diamm/templates/website/source/inventory-composition-order.jinja2
+++ b/diamm/templates/website/source/inventory-composition-order.jinja2
@@ -15,6 +15,8 @@
         <tr class="alpha-order">
             <td class="item-details">
                 <a href="{{ entry.url }}">{{ entry.composition }}</a>
+                {% if entry.fragment %}<em>(frag.)</em>{% endif %}
+                {% if entry.completeness %}<br /><em>{{ entry.completeness }}</em>{% endif %}
             </td>
             <td>
                 {{ composers(entry) }}
