New: Add an image and page import

--- a/diamm/templates/admin/diamm_data/source/change_form.html
+++ b/diamm/templates/admin/diamm_data/source/change_form.html
@@ -3,5 +3,6 @@
 
 {% block object-tools-items %}
     <li><a href="{% url 'admin:copy-inventory' original.pk %}">Copy Inventory</a></li>
+    <li><a href="{% url 'admin:import-images' original.pk %}">Import Images</a></li>
     {{ block.super }}
 {% endblock %}
