Update faculty address

--- a/diamm/templates/website/blocks/footer.jinja2
+++ b/diamm/templates/website/blocks/footer.jinja2
@@ -5,10 +5,12 @@
                 <img src="{{ static('images/headerLogo.png') }}" alt="DIAMM Logo" style="height: 70px; width: auto;"/>
             </div>
             <h5 class="title is-5">The Digital Image Archive of Medieval Music</h5>
-            <p>University of Oxford<br />
-                Faculty of Music<br />
-                St. Aldates<br />
-                Oxford, OX1 1DB<br />
+            <p>
+                University of Oxford, Faculty of Music<br />
+                Schwartzman Centre for the Humanities<br />
+                Radcliffe Observatory Quarter<br />
+                Woodstock Road<br />
+                Oxford, OX2 6GG<br />
                 United Kingdom
             </p>
             <a href="https://www.ox.ac.uk" target="_blank">
